correct spacing

--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -57,6 +57,7 @@
 	.footer-links {
 		padding:5px 15px;
 		font-size:0.8em;
+		height:23px;
 		.source, .timeago {
 			float:left;
 			margin-right:10px;
